--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,3 +7,15 @@
  
   <%= submit_tag "Submit Post" %>
 <% end %>
+
+
+<h3>Post Form</h3>
+<%= form_tag posts_path do %>
+  <label>Post title:</label><br>
+  <%= text_field_tag :'post[title]' %><br>
+
+   <label>Post description:</label><br>
+  <%= text_area_tag :'post[description]' %><br>
+
+   <%= submit_tag "Submit Post" %>
+<% end %>
